--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -2,14 +2,34 @@
 **** HEADINGS
 *****************************/
 
-.heading-primary {
+.heading-primary,
+.heading-secondary {
   font-weight: 700;
   letter-spacing: -0.5px;
   text-transform: uppercase;
+}
+
+.heading-primary {
   font-size: 5.2rem;
   line-height: 1.05;
   margin-bottom: 3.2rem;
   color: #fff;
+}
+
+.heading-secondary {
+  color: #333;
+  font-size: 4.4rem;
+  line-height: 1.2;
+  margin-bottom: 2.4rem;
+}
+
+/****************************
+**** TEXT
+*****************************/
+
+.description-text {
+  text-transform: uppercase;
+  line-height: 1.8;
 }
 
 /****************************
@@ -53,4 +73,8 @@
 
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+.margin-bottom-big {
+  margin-bottom: 6.4rem !important;
 }
