--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -50,3 +50,29 @@
   transform: translate(-50%, -50%);
   width: 120rem;
 }
+
+/***********************************
+***** SECTION ABOUT
+************************************/
+
+.section-about {
+  padding: 9.6rem 0 0 0;
+}
+
+.feature-icon {
+  display: inline-block;
+  color: #dc2201;
+  font-size: 5.2rem;
+  margin-bottom: 3.2rem;
+}
+
+.feature-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 700;
+  margin-bottom: 1.6rem;
+}
+
+.feature-text {
+  line-height: 1.8;
+}
