--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -76,3 +76,36 @@
 .feature-text {
   line-height: 1.8;
 }
+
+/***********************************
+***** SECTION GALLERY
+************************************/
+
+.section-gallery {
+  padding: 9.6rem 0 0 0;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.gallery-item {
+  overflow: hidden;
+  background-color: #000;
+}
+
+.gallery-item img {
+  opacity: 0.7;
+  display: block;
+  width: 100%;
+  height: 30rem;
+  transform: scale(1.15);
+  transition: all 0.5s;
+}
+
+.gallery-item img:hover,
+.gallery-item img:active {
+  transform: scale(1.03);
+  opacity: 1;
+}
