--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -109,3 +109,207 @@
   transform: scale(1.03);
   opacity: 1;
 }
+
+/***********************************
+***** SECTION MENU
+************************************/
+
+.section-menu {
+  padding: 9.6rem 0 0 0;
+}
+
+.card {
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  border-radius: 11px;
+  padding: 3.2rem 2.4rem 4.8rem 2.4rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.meal-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 600;
+  margin-bottom: 3.2rem;
+  line-height: 1.3;
+}
+
+.meal-attributes {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-bottom: 3.2rem;
+}
+
+.card-mark {
+  display: inline-block;
+  position: absolute;
+  top: 13%;
+  right: -18%;
+  width: 30rem;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: #fff;
+  padding: 0.8rem 3.2rem;
+  transform: rotate(45deg);
+  text-align: center;
+}
+
+.card-mark--1 {
+  background-color: #dc2201;
+}
+
+.card-mark--2 {
+  background-color: #ffa11d;
+}
+
+.card-mark--3 {
+  background-color: #ffd43b;
+}
+
+/***********************************
+***** SECTION APPROACH
+************************************/
+
+.section-approach {
+  padding: 9.6rem 0 0 0;
+}
+
+.map {
+  width: 100%;
+  height: 50rem;
+}
+
+/***********************************
+***** SECTION CTA
+***********************************/
+
+.section-cta {
+  padding: 9.6rem 0 0 0;
+}
+
+.cta {
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+  border-radius: 11px;
+  background-image: linear-gradient(to right bottom, #e34e34, #dc2201);
+  overflow: hidden;
+}
+
+.cta-text-box {
+  padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+  color: #420a00;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+.form label {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 1.2rem;
+}
+
+.form input:focus,
+.form textarea:focus {
+  outline: none;
+}
+
+.form input {
+  width: 100%;
+  padding: 1.2rem;
+  font-size: 1.8rem;
+  font-family: inherit;
+  border: none;
+  border-radius: 9px;
+  background-color: #fce9e6;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  color: inherit;
+}
+
+.form input::placeholder {
+  color: #aaa;
+}
+
+.form textarea {
+  width: 100%;
+  padding: 1.2rem;
+  font-size: 1.8rem;
+  font-family: inherit;
+  border: none;
+  background-color: #fce9e6;
+  border-radius: 9px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  color: inherit;
+  height: 10rem;
+}
+
+.form textarea::placeholder {
+  color: #aaa;
+}
+
+.btn-form {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 600;
+  border-radius: 9px;
+  transition: all 0.3s;
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+  background-color: #420a00;
+  color: #f8d3cc;
+  align-self: center;
+  padding: 1.2rem;
+}
+
+.btn-form:hover {
+  background-color: #fff;
+  color: #555;
+}
+
+.cta-img-box {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(227, 78, 52, 0.25),
+      rgba(220, 34, 1, 0.25)
+    ),
+    url(../img/form.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+/***********************************
+***** FOOTER
+************************************/
+
+.footer {
+  padding: 6.4rem 0 0 0;
+}
+
+.footer-text {
+  font-size: 1.6rem;
+}
+
+.social-icon:link,
+.social-icon:visited {
+  font-size: 2rem;
+  color: #555;
+  cursor: pointer;
+  margin-left: 1.6rem;
+  transition: all 0.3s;
+}
+
+.social-icon:hover {
+  font-size: rem;
+  color: #dc2201;
+}
