--- a/resources/css/settings.css
+++ b/resources/css/settings.css
@@ -6,6 +6,7 @@
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -14,4 +15,5 @@ body {
   font-weight: 400;
   color: #555;
   font-size: 1.8rem;
+  overflow-x: hidden;
 }
