--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -51,6 +51,41 @@
   width: 120rem;
 }
 
+/*MOBILE*/
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+
+.icon-mobile-nav {
+  font-size: 4.8rem;
+  color: #fff;
+}
+
+.close-icon {
+  display: none;
+}
+
+/*STICKY*/
+
+.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 3;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.sticky .icon-mobile-nav,
+.sticky .main-nav-link:link,
+.sticky .main-nav-link:visited {
+  color: #333;
+}
+
 /***********************************
 ***** SECTION ABOUT
 ************************************/
@@ -310,6 +345,6 @@
 }
 
 .social-icon:hover {
-  font-size: rem;
+  font-size: 2.4rem;
   color: #dc2201;
 }
